<resources>
    <string name="app_name">Kala</string>

    <!--Main-->
    <string name="contact">contact</string>
    <string name="reminder">reminder</string>
    <string name="setting">setting</string>

    <string-array name="Settings">
        <item>NightMode</item>
        <item>Account</item>
        <item>Logout</item>
    </string-array>

    <!--Login-->
    <string name="login_TitleText">Login</string>
    <string name="login_EmailHint">Email</string>
    <string name="login_UsernameHint">Username</string>
    <string name="login_PasswordHint">Password</string>
    <string name="login_LoginButtonText">LOGIN</string>
    <string name="login_SignupButtonText">SIGNUP</string>

    <!--Signup-->
    <string name="signup_TitleText">Signup</string>
    <string name="signup_EmailHint">Email</string>
    <string name="signup_PasswordHint">Password</string>
    <string name="signup_PasswordRestrictionText">Password must contains one uppercase, one lowercase, one number, at least 6 characters and maximum of 20</string>
    <string name="signup_NextButton">Next</string>
    <string name="signup_CancelButton">Cancel</string>

    <!--Signup Detail-->
    <string name="signupDetail_TitleText">Signup Detail</string>
    <string name="signupDetail_FullnameHint">Fullname</string>
    <string name="signupDetail_PhoneNumberHint">Phone Number</string>
    <string name="signupDetail_BirthDateHint">Birthday</string>
    <string name="signupDetail_NextButton">Next</string>
    <string name="signupDetail_BackButton">Back</string>

    <!--Signup User-->
    <string name="signupUser_TitleText">Signup User</string>
    <string name="signupUser_PicHint">Click Image to change picture</string>
    <string name="signupUser_UsernameHint">Username</string>
    <string name="signupUser_DoneButton">Done</string>
    <string name="signupUser_BackButton">Back</string>

    <!--Comment Header-->
    <string name="commentHeader">COMMENTS</string>
    <string name="commentViewAll">View All</string>

    <!--Contact Header-->
    <string name="contactHeader">Header</string>

    <!--Reminder Header-->
    <string name="reminderHeaderDay">Day</string>
    <string name="reminderHeaderDate">Date</string>

    <!--Reminder Row-->
    <string name="reminderTime">00:00</string>
    <string name="reminderName">Reminder Name</string>
    <string name="reminderTitle">Reminder Title</string>
    <string name="reminderNote">Reminder Note</string>

    <!--Reminder Info-->
    <string name="reminderDetailTitle">Reminder Detail Title</string>
    <string name="reminderDetailParticipants">Reminder Detail Participants</string>
    <string name="reminderDetailDueDate">Reminder Detail Due Date</string>
    <string name="reminderDetailTime">Reminder Detail Time</string>
    <string name="reminderDetailNote">Reminder Detail Note</string>
    <string name="doneButton">Done</string>
    <string name="reminderEditTitle">Reminder Edit Title</string>
    <string name="reminderEditParticipants">Reminder Edit Participants</string>
    <string name="reminderEditDate">Reminder Edit Date</string>
    <string name="reminderEditTime">Reminder Edit Time</string>
    <string name="reminderEditNote">Reminder Edit Note</string>
    <string name="saveButton">Save</string>

    <!--New Reminder-->
    <string name="reminderNewTitle">New Reminder Title</string>
    <string name="reminderNewParticipants">New Reminder Participants</string>
    <string name="reminderNewDate">New Reminder Date</string>
    <string name="reminderNewTime">New Reminder Time</string>
    <string name="reminderNewPhotos">New Reminder Photos</string>
    <string name="reminderNewMap">New Reminder Map</string>

    <!--Contact Info-->
    <string name="contactName"></string>
    <string name="contactUsername"></string>
    <string name="contactEmail"></string>
    <string name="contactPhone"></string>
    <string name="editButton">Edit</string>
    <string name="contactUsernameText">Username</string>
    <string name="contactEmailText">Email</string>
    <string name="contactPhoneText">Phone Number</string>
    <string name="inviteKala">Invite to Kala</string>

    <!--Settings-->
    <string name="profPicDesc">Default Profile Picture</string>
    <string name="picChange">Tap to change profile picture</string>
    <string name="usernameText"> USERNAME</string>
    <string name="editUsername">Username</string>
    <string name="accountText">ACCOUNT</string>
    <string name="editEmail">Email</string>
    <string name="editPhone">Phone</string>
    <string name="profileText">PROFILE</string>
    <string name="editFullName">Fullname</string>
    <string name="editBirthday">Birthday</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!--Strings related to comment row-->
    <string name="comment_user_name">Name</string>

</resources>
