<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profPic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/profPicDesc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/usernameText"
            android:id="@+id/usernameAccount"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profPic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:inputType="textPersonName"
            android:text="@string/editUsername"
            android:ems="20"
            android:id="@+id/editUsername"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/usernameAccount"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/accountText"
            android:id="@+id/account"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/editUsername"
            android:layout_marginLeft="10dp"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:inputType="textEmailAddress"
            android:text="@string/editEmail"
            android:ems="20"
            android:id="@+id/editEmail"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/account"
            android:layout_alignParentStart="true" />

        <View android:id="@+id/textDivisor1"
            android:layout_height="1dp"
            android:layout_width="fill_parent"
            android:background="#ffffff"
            android:layout_marginRight="350dp"
            android:layout_below="@+id/editEmail"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:inputType="textPhonetic"
            android:text="@string/editPhone"
            android:ems="20"
            android:id="@+id/editPhone"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/textDivisor1"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/profileText"
            android:id="@+id/profile"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/editPhone"
            android:layout_marginLeft="10dp"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:inputType="textPersonName"
            android:text="@string/editFullName"
            android:ems="20"
            android:id="@+id/editFullName"
            android:layout_below="@+id/profile"
            android:layout_marginLeft="10dp"
            android:layout_alignParentStart="true" />

        <View android:id="@+id/textDivisor2"
            android:layout_height="1dp"
            android:layout_width="fill_parent"
            android:layout_marginRight="350dp"
            android:layout_below="@+id/editFullName"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:inputType="date"
            android:text="@string/editBirthday"
            android:ems="20"
            android:id="@+id/editBirthday"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/textDivisor2"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</ScrollView>