<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_red_light"
        android:textSize="50sp"
        android:text="@string/signup_TitleText"
        android:id="@+id/signup_TitleText"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp" />

    <EditText android:id="@+id/signup_EmailHint"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/signup_EmailHint"
        android:padding="10dp"
        android:background="@drawable/textinputborder"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText android:id="@+id/signup_PasswordHint"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:background="@drawable/textinputborder"
        android:hint="@string/signup_PasswordHint"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/signup_EmailHint"
        android:layout_alignStart="@+id/signup_EmailHint" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/signup_PasswordRestrictionText"
        android:textColor="@android:color/holo_red_light"
        android:id="@+id/signup_PasswordRestrictionText"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:layout_below="@+id/signup_PasswordHint"
        android:layout_alignStart="@+id/signup_PasswordHint" />

    <Button android:id="@+id/signup_NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/signup_NextButton"
        android:onClick="nextButtonOnClick"
        android:textColor="@android:color/holo_red_light"
        android:layout_gravity="center_horizontal"
        android:layout_alignTop="@+id/signup_CancelButton"
        android:layout_alignEnd="@+id/signup_PasswordHint" />

    <Button android:id="@+id/signup_CancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/signup_CancelButton"
        android:onClick="cancelButtonOnClick"
        android:textColor="@android:color/holo_red_light"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/signup_PasswordHint" />

</RelativeLayout>