<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupDetail_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_red_light"
        android:textSize="50sp"
        android:text="@string/signupDetail_TitleText"
        android:id="@+id/signupDetail_TitleText"
        android:layout_marginTop="100dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText android:id="@+id/signupDetail_FullnameHint"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/signupDetail_FullnameHint"
        android:padding="10dp"
        android:background="@drawable/textinputborder"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText android:id="@+id/signupDetail_PhoneNumberHint"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:background="@drawable/textinputborder"
        android:hint="@string/signupDetail_PhoneNumberHint"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/signupDetail_FullnameHint"
        android:layout_alignStart="@+id/signupDetail_FullnameHint" />

    <EditText android:id="@+id/signupDetail_BirthDateHint"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:background="@drawable/textinputborder"
        android:hint="@string/signupDetail_BirthDateHint"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/signupDetail_PhoneNumberHint"
        android:layout_alignStart="@+id/signupDetail_PhoneNumberHint" />

    <Button android:id="@+id/signupDetail_NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/signupDetail_NextButton"
        android:textColor="@android:color/holo_red_light"
        android:layout_gravity="center_horizontal"
        android:layout_alignTop="@+id/signupDetail_BackButton"
        android:layout_alignEnd="@+id/signupDetail_BirthDateHint" />

    <Button android:id="@+id/signupDetail_BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/signupDetail_BackButton"
        android:textColor="@android:color/holo_red_light"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/signupDetail_BirthDateHint"
        android:layout_marginBottom="75dp" />

</RelativeLayout>