<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kala.kala.ReminderEditFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/reminderEditTitle"
        android:textStyle="bold"
        android:id="@+id/reminderEditTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="left|center" />

    <View
        android:id="@+id/ReminderDivisor"
        android:layout_height="1dp"
        android:layout_width="fill_parent"
        android:background="#ffffff"
        android:layout_below="@+id/reminderEditTitle"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="60dp"
        android:maxHeight="60dp"
        android:scaleType="fitXY"
        android:id="@+id/profPic"
        android:src="@drawable/profilepicture"
        android:contentDescription="@string/profPicDesc"
        android:layout_below="@+id/ReminderDivisor"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/reminderEditParticipants"
        android:textStyle="bold"
        android:id="@+id/reminderEditParticipants"
        android:layout_below="@+id/ReminderDivisor"
        android:layout_toEndOf="@+id/profPic"
        android:gravity="bottom" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="119 friends and 12k others"
        android:id="@+id/textView2"
        android:layout_below="@+id/reminderEditParticipants"
        android:layout_toEndOf="@+id/profPic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/reminderEditDate"
        android:id="@+id/reminderEditDate"
        android:layout_alignTop="@+id/ReminderDivisor"
        android:layout_toEndOf="@+id/reminderEditParticipants"
        android:layout_alignBottom="@+id/textView2"
        android:gravity="center|right" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/reminderEditNote"
        android:id="@+id/reminderEditNote"
        android:layout_below="@+id/profPic"
        android:layout_alignParentStart="true" />
</RelativeLayout>
